	* supports complete_ago extension
	* dropped zlib as a dependency and builds using puff.c instead
	* made the default cache size depend on available physical RAM
	* added flags to torrent::status() that can filter which values are calculated
	* support 'explicit read cache' which keeps a specific set of pieces
	  in the read cache, without implicitly caching other pieces
	* support sending suggest messages based on what's in the read cache
	* clear sparse flag on files that complete on windows
	* support retry-after header for web seeds
	* replaced boost.filesystem with custom functions
	* replaced dependency on boost.thread by asio's internal thread primitives
	* added support for i2p torrents
	* cleaned up usage of MAX_PATH and related macros
	* made it possible to build libtorrent without RTTI support
	* added support to build with libgcrypt and a shipped version of libtommath
	* optimized DHT routing table memory usage
	* optimized disk cache to work with large caches
	* support variable number of optimistic unchoke slots and to dynamically
	  adjust based on the total number of unchoke slots
	* support for BitTyrant choker algorithm
	* support for automatically start torrents when they receive an
	  incoming connection
	* added more detailed instrumentation of the disk I/O thread

0.15 release

	* introduced a session state save mechanism. load_state() and save_state().
	  this saves all session settings and state (except torrents)
	* deprecated dht_state functions and merged it with the session state
	* added support for multiple trackers in magnet links
	* added support for explicitly flushing the disk cache
	* added torrent priority to affect bandwidth allocation for its peers
	* reduced the number of floating point operations (to better support
	  systems without FPU)
	* added new alert when individual files complete
	* added support for storing symbolic links in .torrent files
	* added support for uTorrent interpretation of multi-tracker torrents